--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-query": "^3.17.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-ts-modal": "^1.1.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.9",
