--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "React app",
+  "name": "Create React app Sample",
   "icons": [
     {
       "src": "favicon.ico",
@@ -14,7 +14,7 @@
     },
     {
       "src": "logo512.png",
-      "type": "image/png",
+      "type":"image/png",
       "sizes": "512x512"
     }
   ],
